<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.CartFragment" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productCartTextView"
        android:layout_width="145dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/ProductCart"
        android:textColor="@color/purple_200"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/noItemFoundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoItemFound"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="127dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/SubtotalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtotal" />

        <TextView
            android:id="@+id/shippingCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ShippingCharge" />

        <TextView
            android:id="@+id/TotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TotallAmount" />

        <Button
            android:id="@+id/CheckOutBottun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="300dp"
            android:text="@string/checkout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>