<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.UserProfileFragment" >

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/EditImageButton"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_edit_24"
                android:text="ToggleButton" />

            <ImageView
                android:id="@+id/ProfileImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/img_2" />

            <EditText
                android:id="@+id/FirstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/texteditshape"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/LastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/texteditshape"
                android:ems="10"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/EmailIdEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/texteditshape"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/PhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/texteditshape"
                android:ems="10"
                android:hint="@string/phoneNumber"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/logout" />

            <Button
                android:id="@+id/EditButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>