<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".models.identity.RegisterActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="169dp"
        android:background="@color/pink"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#fffaf9"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/quntitycart_textView"
            android:layout_width="138dp"
            android:layout_height="23dp"
            android:layout_marginLeft="2dp"
            android:text="@string/firstname"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/firstnamere_edittext"
            android:layout_width="377dp"
            android:layout_height="41dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/texteditshape"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="#989898" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="4dp"
            android:text="@string/lastName"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/lastnamere_editText"
            android:layout_width="376dp"
            android:layout_height="43dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/texteditshape"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="#989898" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/Emailre_editText"
            android:layout_width="380dp"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/texteditshape"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="#989898" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/password"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/passwordre_editText"
            android:layout_width="383dp"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/texteditshape"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="4dp"
            android:text="@string/confirmpassword"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/ConforimPasswordre_editText"
            android:layout_width="382dp"
            android:layout_height="43dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/texteditshape"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#989898" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="355dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/pinkish"
            android:padding="10dp"
            android:text="@string/registerbutton"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/loginre_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="36dp"
            android:text="@string/alreadyhaveanaccountTextView"
            android:textColor="@color/gray"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>