<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.main.ItemDetilsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#CCCCCC"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/item_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/shareImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="#CCCCCC"
                android:src="@drawable/ic_baseline_share_24" />

            <ImageView
                android:id="@+id/item_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/CatogoryTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#CCCCCC"
                    android:padding="10dp"
                    android:text="@string/Catogory" />

                <TextView
                    android:id="@+id/TitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#CCCCCC"
                    android:padding="10dp"
                    android:text="@string/Title" />

                <TextView
                    android:id="@+id/descripitionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#CCCCCC"
                    android:padding="10dp"
                    android:text="@string/Descripition" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>